--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -10,6 +10,8 @@ platforms:
     image: ubuntu:16.04
     image_version: 16.04
     privileged: True
+    command: /sbin/init
+
 provisioner:
   name: ansible
   lint:
