--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,7 @@ nginx_ssl_dest_dir: /etc/ssl
 nginx_strong_dh_group: yes  # Strongly recomended in production. See weakdh.org.
 nginx_log_dir: /var/log/nginx
 nginx_ssl_ciphers: 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256'
+nginx_maintenance: no
 
 # nginx file serving
 nginx_serve_static: no
