--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,6 +18,8 @@ nginx_wsgi_app: webapp
 nginx_wsgi_servers:
   - { host: localhost, port: 10000 }
 nginx_site_template: wsgi-site-conf.j2
+nginx_wsgi_read_timeout: 120
+nginx_wsgi_send_timeout: 120
 
 # Only used when nginx_use_letsencrypt is set to no/false
 nginx_ssl_crt:
